--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -99,12 +99,11 @@ Build Utility
 </p><p>Si presume che il file specificato nel file build abbia l'estensione ".FCStd". Se la riga inizia con una directory il file di progetto viene letto da quella sottocartella, in caso contrario, si presume la linea specifichi un file di progetto. Le directory all'interno di directory sono supportate come nidificazione di profondit&agrave; arbitraria. Il formato di specificazione del file &egrave; lo stile "Unix" con diversi livelli separati dal carattere barra "/".
 </p><p>Qualsiasi file mancante viene stampato nella Vista Report. Ogni directory mancante &egrave; stampata nella Vista Report.
 </p><p>Viene creato un nuovo documento e ogni progetto &egrave; un "Project Merged" posto in tale nuovo documento vuoto. Alla fine il documento non viene salvato, deve farlo l'utente, se lo desidera. Quando il file non esiste, il suo nome viene stampato nella vista report
+</p><p><span id="User_Interface"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="User_Interface">User Interface</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Interfaccia_utente">Interfaccia utente</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Interfaccia_utente_2">Interfaccia utente</span></h2>
 <p>Per questa macro non c'&egrave; nessun tipo di GUI. La macro legge un file di testo che &egrave; stato preparato con un editor di testo e produce un modello in un documento di output. Basta fare clic sul pulsante nella barra degli strumenti per avviare il processo, non vi &egrave; alcuna interazione da parte dell'utente.
 </p>
 </div>
@@ -335,12 +334,12 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123101019
+Cached time: 20260123101055
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.058 seconds
+CPU time usage: 0.039 seconds
+Real time usage: 0.065 seconds
 Preprocessor visited node count: 226/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
@@ -351,14 +350,14 @@ Unstrip post&#8208;expand size: 10041/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.871      1 -total
- 32.63%    3.873      1 Template:Macro/it
- 30.90%    3.668      7 Template:Code
- 15.60%    1.852      1 Template:MacroCode
- 13.87%    1.646      1 Template:Clear
+100.00%   14.528      1 -total
+ 36.87%    5.356      1 Template:Macro/it
+ 23.99%    3.485      7 Template:Code
+ 18.95%    2.753      1 Template:MacroCode
+ 15.03%    2.184      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101019 and revision id 1742803. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101055 and revision id 1742805. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
