--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Dienstprogramm Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Build_Utility.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Build Utility (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Build Utility (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Narz&#281;dzie do budowania (3% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -107,11 +107,11 @@ Build Utility
 <p>Per questa macro non c'&egrave; nessun tipo di GUI. La macro legge un file di testo che &egrave; stato preparato con un editor di testo e produce un modello in un documento di output. Basta fare clic sul pulsante nella barra degli strumenti per avviare il processo, non vi &egrave; alcuna interazione da parte dell'utente.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Options">Options</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Options"></span>
+</p>
 <h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Opzioni_2">Opzioni</span></h2>
 <p>Non vi &egrave; alcuna interfaccia grafica quindi non ci sono opzioni. Esiste solo l'alternativa di utilizzare uno dei 3 tipi di righe nel file di testo come descritto sopra.
 </p>
 </div>
@@ -334,30 +334,30 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123101055
+Cached time: 20260123101107
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.065 seconds
+CPU time usage: 0.045 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 226/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 9/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10041/5000000 bytes
+Unstrip post&#8208;expand size: 10042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.528      1 -total
- 36.87%    5.356      1 Template:Macro/it
- 23.99%    3.485      7 Template:Code
- 18.95%    2.753      1 Template:MacroCode
- 15.03%    2.184      1 Template:Clear
+100.00%   12.992      1 -total
+ 35.86%    4.659      1 Template:Macro/it
+ 29.72%    3.861      7 Template:Code
+ 16.14%    2.097      1 Template:Clear
+ 12.79%    1.662      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101055 and revision id 1742805. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101107 and revision id 1742807. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
