--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -115,16 +115,12 @@ Build Utility
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Remarks">Remarks</span></h2>
 </div>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Osservazioni">Osservazioni</span></h2>
 <p>Per ribadire quanto affermato all'inizio, su un singolo file di un piccolo modello questa macro non &egrave; di alcuna utilit&agrave;. Ma &egrave; molto utile per chi modella aerei, locomotive, navi, edifici, impianti o circuiti complessi. Si &egrave; scelto l'estensione ".FCBld" sperando che all'interno di FreeCAD possa essere impostato questo standard per i file di compilazione . Si spera che il carattere "@" riservato per il prefisso nella definizione dei file di comando possa essere accettato in futuro e (se necessario) nello sviluppo.
+</p><p><span id="Links"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>nessuno (fino ad ora)
 </p>
 </div>
@@ -331,13 +327,13 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123101124
+Cached time: 20260123101218
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.079 seconds
-Preprocessor visited node count: 222/1000000
+CPU time usage: 0.051 seconds
+Real time usage: 0.096 seconds
+Preprocessor visited node count: 218/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
@@ -347,14 +343,14 @@ Unstrip post&#8208;expand size: 10042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.480      1 -total
- 41.16%    9.664      1 Template:Clear
- 27.30%    6.409      1 Template:Macro/it
- 17.31%    4.065      7 Template:Code
-  9.68%    2.274      1 Template:MacroCode
+100.00%   22.893      1 -total
+ 34.74%    7.954      1 Template:Macro/it
+ 28.04%    6.418      7 Template:Code
+ 16.91%    3.871      1 Template:MacroCode
+ 13.57%    3.107      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101124 and revision id 1742809. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101218 and revision id 1742813. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
