--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -102,19 +102,14 @@ Build Utility
 </p><p><span id="User_Interface"></span>
 </p>
 <h2><span class="mw-headline" id="Interfaccia_utente">Interfaccia utente</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Interfaccia_utente_2">Interfaccia utente</span></h2>
 <p>Per questa macro non c'&egrave; nessun tipo di GUI. La macro legge un file di testo che &egrave; stato preparato con un editor di testo e produce un modello in un documento di output. Basta fare clic sul pulsante nella barra degli strumenti per avviare il processo, non vi &egrave; alcuna interazione da parte dell'utente.
-</p>
-</div>
-<p><span id="Options"></span>
+</p><p><span id="Options"></span>
 </p>
 <h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
 <p>Non vi &egrave; alcuna interfaccia grafica quindi non ci sono opzioni. Esiste solo l'alternativa di utilizzare uno dei 3 tipi di righe nel file di testo come descritto sopra.
+</p><p><span id="Remarks"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Remarks">Remarks</span></h2>
-</div>
+<h2><span class="mw-headline" id="Osservazioni">Osservazioni</span></h2>
 <p>Per ribadire quanto affermato all'inizio, su un singolo file di un piccolo modello questa macro non &egrave; di alcuna utilit&agrave;. Ma &egrave; molto utile per chi modella aerei, locomotive, navi, edifici, impianti o circuiti complessi. Si &egrave; scelto l'estensione ".FCBld" sperando che all'interno di FreeCAD possa essere impostato questo standard per i file di compilazione . Si spera che il carattere "@" riservato per il prefisso nella definizione dei file di comando possa essere accettato in futuro e (se necessario) nello sviluppo.
 </p><p><span id="Links"></span>
 </p>
@@ -324,13 +319,13 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123101224
+Cached time: 20260123102528
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.064 seconds
-Preprocessor visited node count: 214/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 210/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
@@ -340,14 +335,14 @@ Unstrip post&#8208;expand size: 10042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.601      1 -total
- 35.18%    5.137      1 Template:Macro/it
- 30.73%    4.487      7 Template:Code
- 14.48%    2.114      1 Template:MacroCode
- 13.58%    1.983      1 Template:Clear
+100.00%    8.947      1 -total
+ 37.72%    3.375      1 Template:Macro/it
+ 27.70%    2.478      7 Template:Code
+ 16.87%    1.509      1 Template:MacroCode
+ 10.08%    0.902      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101224 and revision id 1742815. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102528 and revision id 1742819. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
