--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -117,11 +117,8 @@ Build Utility
 <p>nessuno (fino ad ora)
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Build_Utility.png&amp;filetimestamp=20240210201103&amp;.html" class="mw-file-description"><img src="../File/Macro_Build_Utility.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Build_Utility.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Build_Utility.png&amp;filetimestamp=20240210201103&amp;.html" class="mw-file-description"><img src="../File/Macro_Build_Utility.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Build_Utility.FCMacro</b>
 </p>
 <pre>#
 #						Build Utility
@@ -319,13 +316,13 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123102528
+Cached time: 20260123102534
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 210/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 209/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
@@ -335,14 +332,14 @@ Unstrip post&#8208;expand size: 10042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.947      1 -total
- 37.72%    3.375      1 Template:Macro/it
- 27.70%    2.478      7 Template:Code
- 16.87%    1.509      1 Template:MacroCode
- 10.08%    0.902      1 Template:Clear
+100.00%   11.029      1 -total
+ 33.41%    3.685      7 Template:Code
+ 29.31%    3.233      1 Template:Macro/it
+ 14.35%    1.583      1 Template:Clear
+ 14.12%    1.557      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102528 and revision id 1742819. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102534 and revision id 1742821. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
