--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -254,11 +254,11 @@ if len(buildFilePathName) &gt; 0:
 #OCC version: 6.7.0
 #
 #thus ends the macro...</pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Example">Example</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Example"></span>
+</p>
 <h2><span class="mw-headline" id="Esempio">Esempio</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Esempio_2">Esempio</span></h2>
 <p>State lavorando con alcuni altri reparti della vostra azienda per usare FreeCAD per generare un grande modello CAD per un cliente esterno. Per preparare la presentazione imminente &egrave; necessario integrare i modelli rappresentati nei sottosistemi 'black' e 'blue', il dipartimento di ingegneria &egrave; responsabile dei sottosistemi 'green' e 'grey' e voi avete il sottosistema 'metal' nel vostro computer. Anche il cliente utilizza FreeCAD e la progettazione deve integrarsi con i suoi sottosistemi "red', e 'yellow'. Il cliente esterno vi ha detto che lo Stacker Assembly non &egrave; pronto per l'uso e quindi dovete generare il modello in un vostro file build.
 </p>
 </div>
@@ -316,12 +316,12 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123102534
+Cached time: 20260123102542
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.049 seconds
 Preprocessor visited node count: 209/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
@@ -332,14 +332,14 @@ Unstrip post&#8208;expand size: 10042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.029      1 -total
- 33.41%    3.685      7 Template:Code
- 29.31%    3.233      1 Template:Macro/it
- 14.35%    1.583      1 Template:Clear
- 14.12%    1.557      1 Template:MacroCode
+100.00%    9.828      1 -total
+ 36.12%    3.550      1 Template:Macro/it
+ 29.86%    2.934      7 Template:Code
+ 14.58%    1.433      1 Template:MacroCode
+ 12.67%    1.245      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102534 and revision id 1742821. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102542 and revision id 1742823. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
