--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Dienstprogramm Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Build_Utility.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Build Utility (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Build Utility (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Narz&#281;dzie do budowania (3% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -79,13 +79,10 @@ Build Utility
 </p><p><span id="Installation"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Installazione_2">Installazione</span></h2>
 <p>Tutto il codice di buildUtility.FCMacro &egrave; contenuto in una macro, quindi per installarla basta copiare il suo codice nella appropriata directory delle Macro. Dopo, si pu&ograve; invocare Build Utility dal menu Macro, dalla console Python o da un pulsante della barra degli strumenti (il metodo preferito).
 </p>
 <ul><li>per informazioni su come installare il codice delle macro vedere la pagina <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a></li>
 <li>per informazioni su come installarla abbinata a un pulsante in una barra degli strumenti vedere la pagina <a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la barra degli strumenti</a></li></ul>
-</div>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
@@ -257,12 +254,8 @@ if len(buildFilePathName) &gt; 0:
 <p><span id="Example"></span>
 </p>
 <h2><span class="mw-headline" id="Esempio">Esempio</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Esempio_2">Esempio</span></h2>
 <p>State lavorando con alcuni altri reparti della vostra azienda per usare FreeCAD per generare un grande modello CAD per un cliente esterno. Per preparare la presentazione imminente &egrave; necessario integrare i modelli rappresentati nei sottosistemi 'black' e 'blue', il dipartimento di ingegneria &egrave; responsabile dei sottosistemi 'green' e 'grey' e voi avete il sottosistema 'metal' nel vostro computer. Anche il cliente utilizza FreeCAD e la progettazione deve integrarsi con i suoi sottosistemi "red', e 'yellow'. Il cliente esterno vi ha detto che lo Stacker Assembly non &egrave; pronto per l'uso e quindi dovete generare il modello in un vostro file build.
-</p>
-</div>
-<p>Ci sono un sacco di percorsi di directory da digitare perci&ograve; inserite i comandi nel file di testo in Build Utility e dopo potete eseguirli con un semplice clic su un pulsante della barra degli strumenti.
+</p><p>Ci sono un sacco di percorsi di directory da digitare perci&ograve; inserite i comandi nel file di testo in Build Utility e dopo potete eseguirli con un semplice clic su un pulsante della barra degli strumenti.
 </p><p><span typeof="mw:File"><a href="../index.php?title=MacroBuildUtilityTreeDiagram.jpg&amp;filetimestamp=20150123081801&amp;.html" class="mw-file-description"><img src="../File/MacroBuildUtilityTreeDiagram.jpg" decoding="async" width="500" height="371" class="mw-file-element" data-file-width="1622" data-file-height="1205"></a></span>
 </p><p>Il contenuto del seguente file di build "buildFile.FCBld" mostra la struttura del file per il progetto descritto sopra.
 </p>
@@ -316,30 +309,30 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123102542
+Cached time: 20260123102634
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.040 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 209/1000000
+Real time usage: 0.061 seconds
+Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 9/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10042/5000000 bytes
+Unstrip post&#8208;expand size: 10046/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.828      1 -total
- 36.12%    3.550      1 Template:Macro/it
- 29.86%    2.934      7 Template:Code
- 14.58%    1.433      1 Template:MacroCode
- 12.67%    1.245      1 Template:Clear
+100.00%   12.392      1 -total
+ 29.91%    3.706      1 Template:MacroCode
+ 27.18%    3.368      1 Template:Macro/it
+ 26.67%    3.305      7 Template:Code
+ 10.38%    1.286      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102542 and revision id 1742823. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102634 and revision id 1742827. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
