--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -79,7 +79,7 @@ Build Utility
 </p><p><span id="Installation"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<p>Tutto il codice di buildUtility.FCMacro &egrave; contenuto in una macro, quindi per installarla basta copiare il suo codice nella appropriata directory delle Macro. Dopo, si pu&ograve; invocare Build Utility dal menu Macro, dalla console Python o da un pulsante della barra degli strumenti (il metodo preferito).
+<p>Tutto il codice di buildUtility.FCMacro &egrave; contenuto in una macro, quindi per installarla basta copiare il suo codice nell'appropriata directory delle Macro. Dopo, si pu&ograve; invocare Build Utility dal menu Macro, dalla console Python o da un pulsante della barra degli strumenti (il metodo preferito).
 </p>
 <ul><li>per informazioni su come installare il codice delle macro vedere la pagina <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a></li>
 <li>per informazioni su come installarla abbinata a un pulsante in una barra degli strumenti vedere la pagina <a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la barra degli strumenti</a></li></ul>
@@ -309,12 +309,12 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123102634
+Cached time: 20260123102901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.061 seconds
+CPU time usage: 0.047 seconds
+Real time usage: 0.075 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
@@ -325,14 +325,14 @@ Unstrip post&#8208;expand size: 10046/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.392      1 -total
- 29.91%    3.706      1 Template:MacroCode
- 27.18%    3.368      1 Template:Macro/it
- 26.67%    3.305      7 Template:Code
- 10.38%    1.286      1 Template:Clear
+100.00%   18.738      1 -total
+ 37.37%    7.003      1 Template:Macro/it
+ 24.85%    4.657      7 Template:Code
+ 18.96%    3.553      1 Template:MacroCode
+ 14.99%    2.809      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102634 and revision id 1742827. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123102901 and revision id 1742829. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
