--- a/wiki/it/Macro_Convert_021.html
+++ b/wiki/it/Macro_Convert_021.html
@@ -81,13 +81,10 @@ Convert_021
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Run the macro and select a FCStd file when the dialog pops up.
+<p>Eseguire la macro e selezionare un file FCStd quando viene visualizzata la finestra di dialogo.
+</p><p><span id="Install"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Install">Install</span></h2>
-</div>
+<h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Through Addon manager.
 </p>
@@ -152,13 +149,13 @@ print ("All done!")
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123103017
+Cached time: 20260123103054
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.025 seconds
-Real time usage: 0.037 seconds
-Preprocessor visited node count: 91/1000000
+CPU time usage: 0.024 seconds
+Real time usage: 0.033 seconds
+Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 2076/2097152 bytes
 Template argument size: 176/2097152 bytes
 Highest expansion depth: 7/100
@@ -168,11 +165,11 @@ Unstrip post&#8208;expand size: 4238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.608      1 Template:Macro
-100.00%    4.608      1 -total
+100.00%    3.473      1 Template:Macro
+100.00%    3.473      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412392-0!canonical and timestamp 20260123103017 and revision id 1742837. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412392-0!canonical and timestamp 20260123103054 and revision id 1742841. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
