--- a/wiki/it/Macro_Convert_021.html
+++ b/wiki/it/Macro_Convert_021.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Convert_021.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Konvertieren 021 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Convert_021.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Convert 021 (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Convert_021.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Convert 021 (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Convert_021.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Konwertuj 021 (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -89,9 +89,9 @@ Convert_021
 <p>Through Addon manager.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Code">Code</span></h2>
-</div>
+<p><span id="Code"></span>
+</p>
+<h2><span class="mw-headline" id="Codice">Codice</span></h2>
 <p><b>Macro_Convert_021.FCMacro</b>
 </p>
 <pre>#!/usr/bin/env python3
@@ -149,27 +149,27 @@ print ("All done!")
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123103054
+Cached time: 20260123103227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.024 seconds
-Real time usage: 0.033 seconds
+CPU time usage: 0.021 seconds
+Real time usage: 0.028 seconds
 Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 2076/2097152 bytes
 Template argument size: 176/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4238/5000000 bytes
+Unstrip post&#8208;expand size: 4239/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.473      1 Template:Macro
-100.00%    3.473      1 -total
+100.00%    2.723      1 Template:Macro
+100.00%    2.723      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412392-0!canonical and timestamp 20260123103054 and revision id 1742841. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412392-0!canonical and timestamp 20260123103227 and revision id 1742843. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
