--- a/wiki/it/Macro_Convert_021.html
+++ b/wiki/it/Macro_Convert_021.html
@@ -85,11 +85,8 @@ Convert_021
 </p><p><span id="Install"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Through Addon manager.
-</p>
-</div>
-<p><span id="Code"></span>
+<p>Con l'Addon manager.
+</p><p><span id="Code"></span>
 </p>
 <h2><span class="mw-headline" id="Codice">Codice</span></h2>
 <p><b>Macro_Convert_021.FCMacro</b>
@@ -149,13 +146,13 @@ print ("All done!")
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123103227
+Cached time: 20260123103233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.021 seconds
-Real time usage: 0.028 seconds
-Preprocessor visited node count: 90/1000000
+CPU time usage: 0.023 seconds
+Real time usage: 0.033 seconds
+Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 2076/2097152 bytes
 Template argument size: 176/2097152 bytes
 Highest expansion depth: 7/100
@@ -165,11 +162,11 @@ Unstrip post&#8208;expand size: 4239/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.723      1 Template:Macro
-100.00%    2.723      1 -total
+100.00%    4.514      1 Template:Macro
+100.00%    4.514      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412392-0!canonical and timestamp 20260123103227 and revision id 1742843. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412392-0!canonical and timestamp 20260123103232 and revision id 1742845. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
