--- a/wiki/it/Macro_Download_Classifications.html
+++ b/wiki/it/Macro_Download_Classifications.html
@@ -88,9 +88,9 @@ Download Classifications
 <p>Run the macro. After it has run successfully, the new classification systems will be available in the <a href="../BIM_Classification.html" title="BIM Classification">BIM Classification</a> tool. After the macro has run and the classification systems are installed, you can safely delete the macro.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Install">Install</span></h2>
-</div>
+<p><span id="Install"></span>
+</p>
+<h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Through the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon manager</a>.
 </p>
@@ -121,12 +121,12 @@ else:
     print("error getting repo contents")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123105358
+Cached time: 20260123105403
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.050 seconds
+CPU time usage: 0.027 seconds
+Real time usage: 0.040 seconds
 Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2157/2097152 bytes
 Template argument size: 769/2097152 bytes
@@ -137,12 +137,12 @@ Unstrip post&#8208;expand size: 1877/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.431      1 -total
- 62.16%    4.619      1 Template:Macro
- 36.05%    2.679      1 Template:MacroCode
+100.00%    5.513      1 -total
+ 63.41%    3.496      1 Template:Macro
+ 34.74%    1.915      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105358 and revision id 1742853. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105402 and revision id 1742855. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
