--- a/wiki/it/Macro_Download_Classifications.html
+++ b/wiki/it/Macro_Download_Classifications.html
@@ -84,11 +84,8 @@ Download Classifications
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Run the macro. After it has run successfully, the new classification systems will be available in the <a href="../BIM_Classification.html" title="BIM Classification">BIM Classification</a> tool. After the macro has run and the classification systems are installed, you can safely delete the macro.
-</p>
-</div>
-<p><span id="Install"></span>
+<p>Eseguire la macro. Dopo l'esecuzione, i nuovi sistemi di classificazione saranno disponibili nello strumento <a href="../it/BIM_Classification.html" title="BIM Classification/it">Classificazione di BIM</a>. Dopo l'esecuzione della macro e l'installazione dei sistemi di classificazione, &egrave; possibile eliminarla in tutta sicurezza.
+</p><p><span id="Install"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -121,13 +118,13 @@ else:
     print("error getting repo contents")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123105403
+Cached time: 20260123105507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.040 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.042 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 2157/2097152 bytes
 Template argument size: 769/2097152 bytes
 Highest expansion depth: 7/100
@@ -137,12 +134,12 @@ Unstrip post&#8208;expand size: 1877/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.513      1 -total
- 63.41%    3.496      1 Template:Macro
- 34.74%    1.915      1 Template:MacroCode
+100.00%    5.664      1 -total
+ 65.94%    3.735      1 Template:Macro
+ 31.25%    1.770      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105402 and revision id 1742855. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105507 and revision id 1742857. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
